formula work etc

--- a/vignettes/Two-Way-Fixed-Effect-Model.Rmd
+++ b/vignettes/Two-Way-Fixed-Effect-Model.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Two-Way-Fixed-Effect-Model"
+date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Two-Way-Fixed-Effect-Model}
